// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic > basic 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                     alt + ⏎ for newline ·0 tokens"
`;

exports[`basic > basic enter hello world 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                     alt + ⏎ for newline ·0 tokens"
`;

exports[`basic > basic initial 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                     alt + ⏎ for newline ·0 tokens"
`;

exports[`commands > commands 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ > /                                                                                              │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  /sync    Sync codebase to the codebase index, stored in .coder/embeddings"
`;

exports[`commands > commands initial 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ >                                                                                                │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
  / for commands                                                     alt + ⏎ for newline ·0 tokens"
`;
